--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "lint": "eslint src --fix --report-unused-disable-directives",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*": "yarn format",
+    "src/**/*.js": "yarn lint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint-staged"
+    }
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -27,6 +37,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "postcss": "^8.4.27",
     "prettier": "3.0.0",
     "tailwindcss": "^3.3.3",
