chore: style fix

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
       "warn",
       { "allowConstantExport": true }
     ],
+    "react/prop-types": "off",
     "semi": ["error", "always"],
     "no-console": "warn",
     "no-unused-vars": "off",
