feat: discord url add in issue template

--- a/.github/ISSUE_TEMPLATE/other.yml
+++ b/.github/ISSUE_TEMPLATE/other.yml
@@ -43,5 +43,6 @@ body:
   - type: markdown
     attributes:
       value: |
+        Join our discord for feature and bug discussion: [https://discord.gg/St2dHg9YwA](https://discord.gg/St2dHg9YwA)
         In case of emergencies contact me on [LinkedIn](https://www.linkedin.com/in/vatsalsinghkv) or [Twitter](https://twitter.com/vatsalsinghkv)
         Feel free to check out other cool repositories [here](https://github.com/vatsalsinghkv)
