--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "src/**/*.{js,jsx,ts,tsx}": [
       "yarn lint",
       "prettier --write",
-      "yarn test"
+      "npm run test"
     ]
   },
   "dependencies": {
