--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "postcss": "^8.4.27",
     "prettier": "3.0.0",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5",
     "vitest": "^0.34.4"
   }
