--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "eslint-plugin-vitest": "^0.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@iconify-icon/react": "^1.0.8",
