fix: dark mode (hook)

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   },
   "dependencies": {
     "eslint-plugin-vitest": "^0.3.1",
+    "lucide-react": "^0.284.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@iconify-icon/react": "^1.0.8",
