--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint-plugin-vitest": "^0.3.2",
     "lucide-react": "^0.285.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@iconify-icon/react": "^1.0.8",
