--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "format:check": "prettier -c .",
     "lint": "eslint src --fix --report-unused-disable-directives",
     "preview": "vite preview",
-    "prepare": "husky install",
-    "typecheck": "tsc"
+    "prepare": "husky install && panda codegen",
+    "typecheck": "tsc",
   },
   "lint-staged": {
     "/src/**/*.{js,jsx,ts,tsx}": [
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@iconify-icon/react": "^1.0.8",
+    "@pandacss/dev": "^0.17.4",
     "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
