--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "preview": "vite preview",
     "prepare": "husky install && panda codegen",
     "typecheck": "tsc",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "lint-staged": {
     "/src/**/*.{js,jsx,ts,tsx}": [
@@ -33,6 +35,16 @@
   "devDependencies": {
     "@iconify-icon/react": "^1.0.8",
     "@pandacss/dev": "^0.17.4",
+    "@storybook/addon-a11y": "^7.5.2",
+    "@storybook/addon-essentials": "^7.5.2",
+    "@storybook/addon-interactions": "^7.5.2",
+    "@storybook/addon-links": "^7.5.2",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-themes": "^7.5.2",
+    "@storybook/blocks": "^7.5.2",
+    "@storybook/react": "^7.5.2",
+    "@storybook/react-vite": "^7.5.2",
+    "@storybook/testing-library": "^0.2.2",
     "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
@@ -56,8 +68,17 @@
     "postcss": "^8.4.31",
     "prettier": "3.0.3",
     "tailwindcss": "^3.3.3",
+    "storybook": "^7.5.2",
     "typescript": "^5.2.2",
     "vite": "^4.4.11",
     "vitest": "^0.34.6"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
+  },
+  "resolutions": {
+    "jackspeak": "2.3.5"
   }
 }
