--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -7,11 +7,14 @@ on:
 jobs:
   label:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
     - name: Check out repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       
     - name: Auto-label PR based on status and content
-      uses: actions-ecosystem/action-labeler@v1
+      uses: actions/labeler@v5
       with:
         configuration-path: .github/labeler.yml
