--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
     "eslint-plugin-vitest": "^0.3.2",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
