--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,12 @@
   "ignorePatterns": ["dist", ".eslintrc.cjs", "**/*.html"],
   "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
   "settings": { "react": { "version": "18.2" } },
-  "plugins": ["react-refresh", "unused-imports", "vitest", "@typescript-eslint"],
+  "plugins": [
+    "react-refresh",
+    "unused-imports",
+    "vitest",
+    "@typescript-eslint"
+  ],
   "parser": "@typescript-eslint/parser",
   "rules": {
     "react-refresh/only-export-components": [
