feat: button ui add

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-vitest": "^0.3.2",
     "lucide-react": "^0.453.0",
